add draft of lab connector (#53)
