# cx-ssi-lib/src/main/java/org/eclipse/tractusx/ssi/lib/model/verifiable/credential/VerifiableCredentials.java
@@ -1,0 +1,5 @@
+package org.eclipse.tractusx.ssi.lib.model.verifiable.credential;
+
+import java.util.ArrayList;
+
+public class VerifiableCredentials extends ArrayList<VerifiableCredential> {}
